--- a/Project-RPG-Game-SFML-vs2019.vcxproj
+++ b/Project-RPG-Game-SFML-vs2019.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="GameInitialization.cpp" />
     <ClCompile Include="GameLoop.cpp" />
+    <ClCompile Include="GraphicsSettings.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameInitialization.h" />
+    <ClInclude Include="GraphicsSettings.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
