--- a/Project-RPG-Game-SFML-vs2019.vcxproj
+++ b/Project-RPG-Game-SFML-vs2019.vcxproj
@@ -134,15 +134,19 @@
     <ClCompile Include="GameInitialization.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="GraphicsSettings.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameInitialization.h" />
     <ClInclude Include="GraphicsSettings.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="World.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
