--- a/Project-RPG-Game-SFML-vs2019.vcxproj
+++ b/Project-RPG-Game-SFML-vs2019.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="GameInitialization.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="GraphicsSettings.cpp" />
+    <ClCompile Include="Monster.cpp" />
     <ClCompile Include="MovementComponent.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -147,6 +148,7 @@
     <ClInclude Include="AnimationComponent.h" />
     <ClInclude Include="GameInitialization.h" />
     <ClInclude Include="GraphicsSettings.h" />
+    <ClInclude Include="Monster.h" />
     <ClInclude Include="MovementComponent.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
